Kubernetes_Manifest_Files/01-Frontend/QA/04-IngressController/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emartapp-ingress
  namespace: emartapp-QA
spec:
  ingressClassName: nginx
  rules:
    - host: emart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 4200

          - path: /webapi
            pathType: Prefix
            backend:
              service:
                name: javaapi-service
                port:
                  number: 9000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nodeapi-service
                port:
                  number: 5000
